--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>Jordan Skedgwell UX Designer Canberra & Sydney</title>
+        <title>About Jordan Skedgwell</title>
     </head>
 
     <body>
