Created Central America project page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <!-- Col 2 -->
                             <h3>Central America</h3>
                             <p>I travelled in Central America between December 2016 and February 2017. I visited Cuba, Guatemala, Nicaragua, El Salvador, Costa Rica and Panama.</p>
-                            <a href="#">View images</a>
+                            <a href="Central America.html">View images</a>
                         </div>
                         <!-- End col 2 -->
                     </div>
