Updated paragraph about Nicaragua.

--- a/central america.html
+++ b/central america.html
@@ -53,7 +53,8 @@
                     </picture>
                     <h3>Nicaragua</h3>
                     <p>An interest in the Nicaraguan Revolution and the role of the Sandinistas is what drew me to Nicaragua.</p>
-                    <p>In Leon, I was fortunate to meet a veteran of the Revolution, and to be taken on a tour of a building of significance to the Sandinistas by this gentleman. Leon is a beautiful city with a rich cultural heritage.</p>
+                    <p>In Leon, I was fortunate to meet a veteran of the Revolution, and to be taken on a tour of a building of significance to the Sandinistas by this gentleman.</p>
+                    <p>Leon is a beautiful city with a rich cultural heritage.</p>
                 </div>
             </div>
         </main>
