--- a/centralamerica.html
+++ b/centralamerica.html
@@ -2,13 +2,18 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>Central America</title>
+        <title>centralamerica</title>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
         <header>
             <div>
-                <img src="https://via.placeholder.com/150x50?text=Logo" alt="Jordan Skedgwell" />
+                <img src="img/logo.svg" alt="Jordan Skedgwell" />
                 <nav>
                     <ul>
                         <li><a href="index.html">Work</a></li>
@@ -69,7 +74,7 @@
                     <p>If you'd like to chat, call me on <a href="tel:0400000000">0400 000 000</a>. If you'd prefer to email, use the button below.</p>
                     <div>
                         <!-- Email link -->
-                        <a href="mailto:jordan.skedgwell@gmail.com">Email me</a>
+                        <a href="mailto:jordan.skedgwell@gmail.com" class="button contact">Email me</a>
                     </div>
                     <div>
                         <!-- Social media links -->
@@ -98,5 +103,5 @@
             </div>
             <!-- Section div - Orange -->
         </footer>
-    </body>
-</html>
+      </body>
+      </html>
