Updated section IDs

--- a/about.html
+++ b/about.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
     <body>
         <header>
             <div>
-              <img src="img/logo.svg" alt="Jordan Skedgwell" />
+                <img src="img/logo.svg" alt="Jordan Skedgwell" />
                 <nav>
                     <ul>
                         <li><a href="index.html">Work</a></li>
@@ -26,27 +26,21 @@
 
         <main>
             <div>
-                <!-- Section div - Orange -->
+                <!-- H1 section -->
                 <div>
-                    <!-- Container - Yellow -->
                     <h1>About</h1>
                 </div>
-                <!-- End container - Yellow -->
             </div>
-            <!-- End section div - Orange -->
 
             <div>
-                <!-- Section div - Orange -->
+                <!-- Hero image section -->
                 <div>
-                    <!-- Container - Yellow -->
                     <picture>
                         <source srcset="img/portrait-sml.jpg" media="(max-width:767px)" />
                         <img src="img/portrait-lrg.jpg" alt="Jordan Skedgwell" />
                     </picture>
                     <div>
-                        <!--Row for columns-->
                         <div>
-                            <!-- Column 1 -->
                             <h2>My story</h2>
                             <p>
                                 I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland.
@@ -54,14 +48,10 @@
                             <p>Outside of work I enjoy snowboarding and surfing, chatting with my nieces and nephews, holding conversations with an assortment of animals, and mourning the loss of authentic hard rock and rap music.</p>
                             <a href="files/resume.pdf" target="_blank" download>Download my CV</a>
                         </div>
-                        <!-- Column 1 -->
                         <div>
-                            <!-- Column 2 -->
                             <h2>Skills</h2>
                             <div>
-                                <!-- Row -->
                                 <div>
-                                    <!-- Col 1 -->
                                     <h3>Relevant skills</h3>
                                     <ul>
                                         <li>Leading end-to-end product design processes</li>
@@ -72,7 +62,6 @@
                                     </ul>
                                 </div>
                                 <div>
-                                    <!-- Col 2 -->
                                     <h3>Tools I use</h3>
                                     <ul>
                                         <li>Askable</li>
@@ -86,29 +75,21 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Column 2 -->
                     </div>
-                    <!-- Row for columns -->
                 </div>
-                <!-- End container - Yellow -->
             </div>
-            <!-- End section div - Orange -->
         </main>
 
         <footer id="contact">
             <div>
-                <!-- Section div - Orange -->
+                <!-- Contact section -->
                 <div>
-                    <!-- Container div - Yellow -->
-
                     <h2>Get in touch</h2>
                     <p>If you'd like to chat, call me on <a href="tel:0400000000">0400 000 000</a>. If you'd prefer to email, use the button below.</p>
                     <div>
-                        <!-- Email link -->
                         <a href="mailto:jordan.skedgwell@gmail.com" class="button contact">Email me</a>
                     </div>
                     <div>
-                        <!-- Social media links -->
                         <a href="https://www.linkedin.com/in/jordanskedgwell/" target="_blank">
                             <svg
                                 height="67px"
@@ -130,9 +111,7 @@
                     </div>
                     <p>Copyright Jordan Skedgwell 2021</p>
                 </div>
-                <!-- Container div - Yellow -->
             </div>
-            <!-- Section div - Orange -->
         </footer>
     </body>
 </html>
