--- a/centralamerica.html
+++ b/centralamerica.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
     <body>
@@ -66,18 +66,14 @@
 
         <footer id="contact">
             <div>
-                <!-- Section div - Orange -->
+                <!-- Contact section -->
                 <div>
-                    <!-- Container div - Yellow -->
-
                     <h2>Get in touch</h2>
                     <p>If you'd like to chat, call me on <a href="tel:0400000000">0400 000 000</a>. If you'd prefer to email, use the button below.</p>
                     <div>
-                        <!-- Email link -->
                         <a href="mailto:jordan.skedgwell@gmail.com" class="button contact">Email me</a>
                     </div>
                     <div>
-                        <!-- Social media links -->
                         <a href="https://www.linkedin.com/in/jordanskedgwell/" target="_blank">
                             <svg
                                 height="67px"
@@ -99,9 +95,7 @@
                     </div>
                     <p>Copyright Jordan Skedgwell 2021</p>
                 </div>
-                <!-- Container div - Yellow -->
             </div>
-            <!-- Section div - Orange -->
         </footer>
-      </body>
-      </html>
+    </body>
+</html>
