--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
     <body>
@@ -15,18 +15,18 @@
             <div>
                 <img src="img/logo.svg" alt="Jordan Skedgwell" />
                 <nav>
-                  <ul>
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                  </ul>
+                    <ul>
+                        <li><a href="index.html">Work</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
                 </nav>
             </div>
         </header>
 
         <main>
             <div>
-                <!-- Section div - Orange -->
+                <!-- Hero section -->
                 <div>
                     <!-- Container div - Yellow -->
                     <h1>Hi! I’m Jordan Skedgwell. <span>I’m a UX designer based in Australia.</span></h1>
@@ -34,10 +34,9 @@
                 </div>
                 <!-- Container div - Yellow -->
             </div>
-            <!-- Section div - Orange -->
 
             <div>
-                <!-- Section div - Orange -->
+                <!-- Work section -->
                 <div>
                     <!-- Container div-Yellow -->
                     <h2>My work</h2>
@@ -87,7 +86,7 @@
 
         <footer id="contact">
             <div>
-                <!-- Section div - Orange -->
+                <!-- Contact section -->
                 <div>
                     <!-- Container div - Yellow -->
 
