--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
         </header>
 
         <main>
-            <div>
-                <!-- Hero section -->
+            <div id="hero"><!-- Hero section -->
                 <div>
                     <h1>Hi! I’m Jordan Skedgwell. <span>I’m a UX designer based in Australia.</span></h1>
                     <p>I also love to travel and take photos of the places I visit.</p>
                 </div>
             </div>
 
-            <div>
-                <!-- Work section -->
+            <div id="work"><!-- Work section -->
                 <div>
                     <h2>My work</h2>
                     <div>
