--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 
     <body>
         <header>
-            <div>
-                <img src="img/logo.svg" alt="Jordan Skedgwell" />
+            <div class="container">
+                <img class="logo" src="img/logo.svg" alt="Jordan Skedgwell" />
                 <nav>
-                    <ul>
+                    <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="#contact">Contact</a></li>
@@ -26,13 +26,13 @@
 
         <main>
             <div>
-                <div>
+                <div class="container">
                     <h1>About</h1>
                 </div>
             </div>
 
             <div>
-                <div>
+                <div class="container">
                     <picture>
                         <source srcset="img/portrait-sml.jpg" media="(max-width:767px)" />
                         <img src="img/portrait-lrg.jpg" alt="Jordan Skedgwell" />
@@ -79,7 +79,7 @@
         </main>
 
         <footer id="contact">
-            <div>
+            <div class="container">
                 <!-- Contact section -->
                 <div>
                     <h2>Get in touch</h2>
