--- a/centralamerica.html
+++ b/centralamerica.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>centralamerica</title>
+        <title>About</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -12,10 +12,10 @@
 
     <body>
         <header>
-            <div>
-                <img src="img/logo.svg" alt="Jordan Skedgwell" />
+            <div class="container">
+                <img class="logo" src="img/logo.svg" alt="Jordan Skedgwell" />
                 <nav>
-                    <ul>
+                    <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="#contact">Contact</a></li>
@@ -25,7 +25,7 @@
         </header>
 
         <main>
-            <div>
+            <div class="container">
                 <h2>Central America</h2>
                 <div>
                     <picture>
@@ -34,11 +34,8 @@
                     </picture>
                     <h3>Cuba</h3>
                     <p>I’d been curious about Cuba for a long time, so it was really exciting to touch down in Havana on a late December evening. My hosts were a lovely couple - a psychologist and a dental technician.</p>
-                    <p>Highlights of my two weeks in Cuba included a few days in Vinales, an evening at the Fábrica de Arte Cubano, and a visit to Radio Havana (my visit inspired by the classic Rancid track).</p>
-                    <p>
-                        At Radio Havana, my friend and I were mistaken for American experts on radical Islam and were very nearly ushered into an interview, before explaining in our broken Spanish that we simply wanted to check out the
-                        studio.
-                    </p>
+                    <p>Highlights of my two weeks in Cuba included a few days in Vinales, an evening at the Fábrica de Arte Cubano, and a visit to Radio Havana (my visit inspired by the <a href="https://www.youtube.com/embed/pkMhQxhtUb0"> classic Rancid track)</a>.</p>
+                    <p>At Radio Havana, my friend and I were mistaken for American experts on radical Islam and were very nearly ushered into an interview, before explaining in our broken Spanish that we simply wanted to check out the studio.</p>
                 </div>
                 <div>
                     <picture>
@@ -65,7 +62,7 @@
         </main>
 
         <footer id="contact">
-            <div>
+            <div class="container">
                 <!-- Contact section -->
                 <div>
                     <h2>Get in touch</h2>
