--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>Jordan Skedgwell Product Designer Canberra & Sydney</title>
+        <title>About</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -12,10 +12,10 @@
 
     <body>
         <header>
-            <div>
-                <img src="img/logo.svg" alt="Jordan Skedgwell" />
+            <div class="container">
+                <img class="logo" src="img/logo.svg" alt="Jordan Skedgwell" />
                 <nav>
-                    <ul>
+                    <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="#contact">Contact</a></li>
@@ -26,16 +26,16 @@
 
         <main>
             <div id="hero"><!-- Hero section -->
-                <div>
+                <div class="container">
                     <h1>Hi! I’m Jordan Skedgwell. <span>I’m a UX designer based in Australia.</span></h1>
                     <p>I also love to travel and take photos of the places I visit.</p>
                 </div>
             </div>
 
             <div id="work"><!-- Work section -->
-                <div>
+                <div class="container">
                     <h2>My work</h2>
-                    <div>
+                    <div class="row">
                         <div>
                             <picture>
                                 <source srcset="img/cuba/cuba-flg-sml.jpeg" media="(max-width:767px)" />
@@ -44,12 +44,12 @@
                         </div>
                         <div>
                             <h3>Central America</h3>
-                            <p>I travelled in Central America between December 2016 and February 2017. I visited Cuba, Guatemala, Nicaragua, El Salvador, Costa Rica and Panama.</p>
+                            <p>I travelled in Central America between December 2016 and February 2017. I visited Cuba, Guatemala, El Salvador, Nicaragua, Costa Rica and Panama.</p>
                             <a href="centralamerica.html" class="button">View images</a>
                         </div>
                     </div>
 
-                    <div>
+                    <div class="row">
                         <div>
                             <picture>
                                 <source srcset="img/peru/mp-sml.jpeg" media="(max-width:767px)" />
@@ -67,7 +67,7 @@
         </main>
 
         <footer id="contact">
-            <div>
+            <div class="container">
                 <!-- Contact section -->
                 <div>
                     <h2>Get in touch</h2>
