Update to Main section
Added container and row classes for 'My story' and 'My skills' sections.

--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-
     <body>
         <header>
             <div class="container">
@@ -23,62 +22,61 @@
                 </nav>
             </div>
         </header>
-
         <main>
-            <div>
-                <div class="container">
-                    <h1>About</h1>
-                </div>
+          <div>
+            <div class="container">
+                <h1>About</h1>
             </div>
+          </div>
+          <div>
+            <div class="container">
+                <picture>
+                    <source srcset="img/portrait-sml.jpg" media="(max-width:767px)" />
+                    <img src="img/portrait-lrg.jpg" alt="Jordan Skedgwell" />
+                </picture>
+            </div>
+          </div>
 
-            <div>
-                <div class="container">
-                    <picture>
-                        <source srcset="img/portrait-sml.jpg" media="(max-width:767px)" />
-                        <img src="img/portrait-lrg.jpg" alt="Jordan Skedgwell" />
-                    </picture>
-                    <div>
-                        <div>
-                            <h2>My story</h2>
-                            <p>
-                                I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland.
-                            </p>
-                            <p>Outside of work I enjoy snowboarding and surfing, chatting with my nieces and nephews, holding conversations with an assortment of animals, and mourning the loss of authentic hard rock and rap music.</p>
-                            <a href="files/resume.pdf" target="_blank" download>Download my CV</a>
-                        </div>
-                        <div>
-                            <h2>Skills</h2>
-                            <div>
-                                <div>
-                                    <h3>Relevant skills</h3>
-                                    <ul>
-                                        <li>Leading end-to-end product design processes</li>
-                                        <li>UI design and frontend development</li>
-                                        <li>Stakeholder and client engagement</li>
-                                        <li>Team leadership</li>
-                                        <li>Project management</li>
-                                    </ul>
-                                </div>
-                                <div>
-                                    <h3>Tools I use</h3>
-                                    <ul>
-                                        <li>Askable</li>
-                                        <li>DevOps</li>
-                                        <li>Figma</li>
-                                        <li>InVision</li>
-                                        <li>Jira</li>
-                                        <li>Optimal Workshop</li>
-                                        <li>Sketch</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!-- Rows 42-43 and 50-51 seem correct, but aren't appearing as columns on the About page  -->
+          <div>
+            <div class="container">
+              <div class="row">
+                <h2>My story</h2>
+                <p>I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland.</p>
+                <p>Outside of work I enjoy snowboarding and surfing, chatting with my nieces and nephews, holding conversations with an assortment of animals, and mourning the loss of authentic hard rock and rap music.</p>
+                <a href="files/resume.pdf" target="_blank" download>Download my CV</a>
+              </div>
             </div>
+            <div class="container">
+              <div class="row">
+                <h2>Skills</h2>
+                  <div>
+                    <h3>Relevant skills</h3>
+                      <ul>
+                        <li>Leading end-to-end product design processes</li>
+                        <li>UI design and frontend development</li>
+                        <li>Stakeholder and client engagement</li>
+                        <li>Team leadership</li>
+                        <li>Project management</li>
+                      </ul>
+                  </div>
+                  <div>
+                    <h3>Tools I use</h3>
+                    <ul>
+                      <li>Askable</li>
+                      <li>DevOps</li>
+                      <li>Figma</li>
+                      <li>InVision</li>
+                      <li>Jira</li>
+                      <li>Optimal Workshop</li>
+                      <li>Sketch</li>
+                    </ul>
+                  </div>
+              </div>
+            </div>
+          </div>
         </main>
-
-        <footer id="contact">
+      <footer id="contact">
             <div class="container">
                 <!-- Contact section -->
                 <div>
