--- a/about.html
+++ b/about.html
@@ -41,50 +41,45 @@
                 <!-- Section -->
                 <div class="container">
                     <div class="row">
-                        <div>
-                            <!-- Column -->
+                        <div class="col-md-6">
                             <h2>My story</h2>
                             <p>
-                                I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland.
+                                I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland
                             </p>
                             <p>Outside of work I enjoy snowboarding and surfing, chatting with my nieces and nephews, holding conversations with an assortment of animals, and mourning the loss of authentic hard rock and rap music.</p>
                             <a href="files/resume.pdf" target="_blank" download>Download my CV</a>
                         </div>
-                        <div>
+                        <div class="col-md-6">
                             <!-- Column -->
-                            <h2>Skills</h2>
-                            <div class="row">
-                                <div>
-                                    <h3>Relevant skills</h3>
-                                    <ul>
-                                        <li>Leading end-to-end product design processes</li>
-                                        <li>UI design and frontend development</li>
-                                        <li>Stakeholder and client engagement</li>
-                                        <li>Team leadership</li>
-                                        <li>Project management</li>
-                                    </ul>
-                                </div>
-                                <div>
-                                    <h3>Tools I use</h3>
-                                    <ul>
-                                        <li>Askable</li>
-                                        <li>DevOps</li>
-                                        <li>Figma</li>
-                                        <li>InVision</li>
-                                        <li>Jira</li>
-                                        <li>Optimal Workshop</li>
-                                        <li>Sketch</li>
-                                    </ul>
-                                </div>
-                            </div>
+                            <h2>Skills and tools</h2>
+                            <h3>Relevant skills</h3>
+                            <ul>
+                                <li>Leading end-to-end product design processes</li>
+                                <li>UI design and frontend development</li>
+                                <li>Stakeholder and client engagement</li>
+                                <li>Team leadership</li>
+                                <li>Project management</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Tools I use</h3>
+                            <ul>
+                                <li>Askable</li>
+                                <li>DevOps</li>
+                                <li>Figma</li>
+                                <li>InVision</li>
+                                <li>Jira</li>
+                                <li>Optimal Workshop</li>
+                                <li>Sketch</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </main>
+
         <footer id="contact">
             <div class="container">
-                <!-- Contact section -->
                 <div>
                     <h2>Get in touch</h2>
                     <p>If you'd like to chat, call me on <a href="tel:0400000000">0400 000 000</a>. If you'd prefer to email, use the button below.</p>
