Added .js script

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <!-- Section -->
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6"><!-- Column -->
                             <h2>My story</h2>
                             <p>
                                 I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland
@@ -49,8 +49,7 @@
                             <p>Outside of work I enjoy snowboarding and surfing, chatting with my nieces and nephews, holding conversations with an assortment of animals, and mourning the loss of authentic hard rock and rap music.</p>
                             <a href="files/resume.pdf" target="_blank" download>Download my CV</a>
                         </div>
-                        <div class="col-md-6">
-                            <!-- Column -->
+                        <div class="col-md-6"><!-- Column -->
                             <h2>Skills and tools</h2>
                             <h3>Relevant skills</h3>
                             <ul>
@@ -109,6 +108,7 @@
                     <p>Copyright Jordan Skedgwell 2021</p>
                 </div>
             </div>
-        </footer>
-    </body>
-</html>
+          </footer>
+        <script src="js/scripts.js"></script>
+      </body>
+  </html>
