--- a/centralamerica.html
+++ b/centralamerica.html
@@ -91,8 +91,9 @@
                         </a>
                     </div>
                     <p>Copyright Jordan Skedgwell 2021</p>
+                  </div>
                 </div>
-            </div>
-        </footer>
-    </body>
-</html>
+              </footer>
+            <script src="js/scripts.js"></script>
+          </body>
+      </html>
