--- a/index.html
+++ b/index.html
@@ -1046,5 +1046,6 @@
                 </div>
             </div>
         </footer>
+      <script src="js/scripts.js"></script>
     </body>
 </html>
