--- a/about.html
+++ b/about.html
@@ -9,74 +9,65 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-    <body>
+    <body id="about-page">
         <header>
-            <div class="container">
-                <img class="logo" src="img/logo.svg" alt="Jordan Skedgwell" />
-                <nav>
-                    <ul class="navigation">
-                        <li><a href="index.html">Work</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
+          <div class="container">
+            <img class="logo" src="img/logo.svg" alt="Jordan Skedgwell" />
+            <nav>
+              <ul class="navigation">
+                <li><a href="index.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
         </header>
         <main>
-            <div>
-                <div class="container">
-                    <h1>About</h1>
-                </div>
+          <div>
+              <div class="container">
+                  <h1>About</h1>
+              </div>
+          </div>
+          <div>
+            <div class="container">
+              <picture>
+                  <source srcset="img/portrait-sml.jpg" media="(max-width:767px)" />
+                  <img src="img/portrait-lrg.jpg" alt="Jordan Skedgwell" />
+              </picture>
             </div>
-            <div>
-                <div class="container">
-                    <picture>
-                        <source srcset="img/portrait-sml.jpg" media="(max-width:767px)" />
-                        <img src="img/portrait-lrg.jpg" alt="Jordan Skedgwell" />
-                    </picture>
-                </div>
-            </div>
+          </div>
 
-            <div>
-                <!-- Section -->
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6"><!-- Column -->
-                            <h2>My story</h2>
-                            <p>
-                                I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland
-                            </p>
-                            <p>Outside of work I enjoy snowboarding and surfing, chatting with my nieces and nephews, holding conversations with an assortment of animals, and mourning the loss of authentic hard rock and rap music.</p>
-                            <a href="files/resume.pdf" target="_blank" download>Download my CV</a>
-                        </div>
-                        <div class="col-md-6"><!-- Column -->
-                            <h2>Skills and tools</h2>
-                            <h3>Relevant skills</h3>
-                            <ul>
-                                <li>Leading end-to-end product design processes</li>
-                                <li>UI design and frontend development</li>
-                                <li>Stakeholder and client engagement</li>
-                                <li>Team leadership</li>
-                                <li>Project management</li>
-                            </ul>
-                        </div>
-                        <div>
-                            <h3>Tools I use</h3>
-                            <ul>
-                                <li>Askable</li>
-                                <li>DevOps</li>
-                                <li>Figma</li>
-                                <li>InVision</li>
-                                <li>Jira</li>
-                                <li>Optimal Workshop</li>
-                                <li>Sketch</li>
-                            </ul>
-                        </div>
-                    </div>
+          <div class="container">
+            <div class="row">
+              <div class="column col-md-6 col-lg-7">
+                <h2>My story</h2>
+                <p>I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland</p>
+                <p>Outside of work I enjoy snowboarding and surfing, chatting with my nieces and nephews, holding conversations with an assortment of animals, and mourning the loss of authentic hard rock and rap music.</div>
+                <a href="files/resume.pdf" target="_blank" download>Download my CV</a>
+              <div class="column col-md-6 col-lg-7">
+                <h2>Skills and tools</h2>
+                  <h3>Relevant skills</h3>
+                    <ul>
+                      <li>Leading end-to-end product design processes</li>
+                      <li>UI design and frontend development</li>
+                      <li>Stakeholder and client engagement</li>
+                      <li>Team leadership</li>
+                      <li>Project management</li>
+                    </ul>
+                  <h3>Tools I use</h3>
+                    <ul>
+                      <li>Askable</li>
+                      <li>DevOps</li>
+                      <li>Figma</li>
+                      <li>InVision</li>
+                      <li>Jira</li>
+                      <li>Optimal Workshop</li>
+                      <li>Sketch</li>
+                    </ul>
                 </div>
+              </div>
             </div>
-        </main>
-
+          </main>
         <footer id="contact">
             <div class="container">
                 <div>
@@ -108,7 +99,7 @@
                     <p>Copyright Jordan Skedgwell 2021</p>
                 </div>
             </div>
-          </footer>
-        <script src="js/scripts.js"></script>
-      </body>
-  </html>
+        </footer>
+      <script src="js/scripts.js"></script>
+    </body>
+</html>
