--- a/centralamerica.html
+++ b/centralamerica.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
-    <body>
+    <body id=central-america-page>
         <header>
             <div class="container">
                 <img class="logo" src="img/logo.svg" alt="Jordan Skedgwell" />
