--- a/about.html
+++ b/about.html
@@ -100,6 +100,7 @@
                 </div>
             </div>
         </footer>
-      <script src="js/scripts.js"></script>
+      <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/scripts.js"></script>
     </body>
 </html>
