--- a/centralamerica.html
+++ b/centralamerica.html
@@ -94,6 +94,7 @@
                   </div>
                 </div>
               </footer>
+              <script src="js/jquery-3.3.1.min.js"></script>
             <script src="js/scripts.js"></script>
           </body>
       </html>
